Subscription section added in Content component

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -14,4 +14,10 @@
 		U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.texture {
+	z-index: 0;
+	background-color: #edf5fc;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%231c75bc' fill-opacity='0.27' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
 @tailwind utilities;
